Fix stats text-align

--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -16,6 +16,10 @@ html, body {
   opacity: 0.6;
 }
 
+.stats {
+  text-align: center;
+}
+
 .status-bar {
   text-align: center;
   margin-bottom: 0.8em;
